src/Analizador/Gramatica.java
/* Generated By:JavaCC: Do not edit this line. Gramatica.java */
package Analizador;
public class Gramatica implements GramaticaConstants {

/** Fin Lexico */
  final public void principal() throws ParseException {
    jj_consume_token(PACKAGE);
    jj_consume_token(IDENTIFICADOR);
    if (jj_2_1(4)) {
      imports();
    } else {
      ;
    }
    function();
  }

  final public void imports() throws ParseException {
    jj_consume_token(IMPORT);
    if (jj_2_3(4)) {
      jj_consume_token(STRING_VALOR);
    } else if (jj_2_4(4)) {
      jj_consume_token(PAPERTURA);
      label_1:
      while (true) {
        jj_consume_token(STRING_VALOR);
        if (jj_2_2(4)) {
          ;
        } else {
          break label_1;
        }
      }
      jj_consume_token(PCIERRE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void function() throws ParseException {
    jj_consume_token(FUNCTION);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PAPERTURA);
    if (jj_2_6(4)) {
      label_2:
      while (true) {
        listaIdentificadores();
        tipoDato();
        if (jj_2_5(4)) {
          ;
        } else {
          break label_2;
        }
      }
    } else {
      ;
    }
    jj_consume_token(PCIERRE);
    if (jj_2_7(4)) {
      tipoDato();
    } else {
      ;
    }
    jj_consume_token(LLAVEAPERTURA);
    label_3:
    while (true) {
      sentencias();
      if (jj_2_8(4)) {
        ;
      } else {
        break label_3;
      }
    }
    if (jj_2_9(4)) {
      jj_consume_token(RETURN);
      listaValores();
    } else {
      ;
    }
    jj_consume_token(LLAVECIERRE);
  }

  final public void sentencias() throws ParseException {
    if (jj_2_10(4)) {
      declararVariable();
    } else if (jj_2_11(4)) {
      declaracionIdentificador();
    } else if (jj_2_12(4)) {
      controlIf();
    } else if (jj_2_13(4)) {
      For();
    } else if (jj_2_14(4)) {
      arreglos();
    } else if (jj_2_15(4)) {
      controlSwitch();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void declararVariable() throws ParseException {
    jj_consume_token(VAR);
    listaIdentificadores();
    tipoDato();
    if (jj_2_16(4)) {
      jj_consume_token(ASIGNACION);
      listaValores();
    } else {
      ;
    }
  }

  final public void listaIdentificadores() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    label_4:
    while (true) {
      if (jj_2_17(4)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(COMA);
      jj_consume_token(IDENTIFICADOR);
    }
  }

  final public void valor() throws ParseException {
    if (jj_2_19(4)) {
      jj_consume_token(STRING_VALOR);
    } else if (jj_2_20(4)) {
      jj_consume_token(INT_VALOR);
    } else if (jj_2_21(4)) {
      jj_consume_token(FLOAT_VALOR);
    } else if (jj_2_22(4)) {
      jj_consume_token(IDENTIFICADOR);
      if (jj_2_18(4)) {
        jj_consume_token(CORAPERTURA);
        jj_consume_token(INT_VALOR);
        jj_consume_token(CORCIERRE);
      } else {
        ;
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void listaValores() throws ParseException {
    opSimple();
    label_5:
    while (true) {
      if (jj_2_23(4)) {
        ;
      } else {
        break label_5;
      }
      jj_consume_token(COMA);
      opSimple();
    }
  }

  final public void tipoDato() throws ParseException {
    if (jj_2_24(4)) {
      jj_consume_token(INT);
    } else if (jj_2_25(4)) {
      jj_consume_token(STRING);
    } else if (jj_2_26(4)) {
      jj_consume_token(FLOAT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void declaracionIdentificador() throws ParseException {
    if (jj_2_27(2147483647)) {
      asignacionVariableMultiple();
    } else if (jj_2_28(2147483647)) {
      asignacionVariableCorta();
    } else if (jj_2_29(2147483647)) {
      imprimir();
    } else if (jj_2_30(2147483647)) {
      asignacionVariable();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void asignacionVariable() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    if (jj_2_31(4)) {
      jj_consume_token(ASIGNACIONSUMA);
    } else if (jj_2_32(4)) {
      jj_consume_token(ASIGNACIONRESTA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    opSimple();
  }

  final public void asignacionVariableMultiple() throws ParseException {
    listaIdentificadores();
    jj_consume_token(ASIGNACION);
    listaValores();
  }

  final public void asignacionVariableCorta() throws ParseException {
    listaIdentificadores();
    jj_consume_token(ASIGNACIONCORTA);
    listaValores();
  }

  final public void opSimple() throws ParseException {
    if (jj_2_33(4)) {
      valor();
    } else if (jj_2_34(4)) {
      opParentesis();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_6:
    while (true) {
      if (jj_2_35(4)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_38(4)) {
        if (jj_2_36(4)) {
          opAritmetico();
        } else if (jj_2_37(4)) {
          opBit();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        valor();
      } else if (jj_2_39(4)) {
        opParentesis();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void opParentesis() throws ParseException {
    jj_consume_token(PAPERTURA);
    opSimple();
    jj_consume_token(PCIERRE);
  }

  final public void opAritmetico() throws ParseException {
    if (jj_2_40(4)) {
      jj_consume_token(SUMA);
    } else if (jj_2_41(4)) {
      jj_consume_token(RESTA);
    } else if (jj_2_42(4)) {
      jj_consume_token(MULTIPLICACION);
    } else if (jj_2_43(4)) {
      jj_consume_token(MOD);
    } else if (jj_2_44(4)) {
      jj_consume_token(INCREMENTO);
    } else if (jj_2_45(4)) {
      jj_consume_token(DECREMENTO);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void controlIf() throws ParseException {
    jj_consume_token(IF);
    if (jj_2_46(4)) {
      condicion();
    } else if (jj_2_47(4)) {
      jj_consume_token(IDENTIFICADOR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(LLAVEAPERTURA);
    label_7:
    while (true) {
      sentencias();
      if (jj_2_48(4)) {
        ;
      } else {
        break label_7;
      }
    }
    jj_consume_token(LLAVECIERRE);
    if (jj_2_49(4)) {
      controlElse();
    } else {
      ;
    }
  }

  final public void controlElse() throws ParseException {
    jj_consume_token(ELSE);
    jj_consume_token(LLAVEAPERTURA);
    label_8:
    while (true) {
      sentencias();
      if (jj_2_50(4)) {
        ;
      } else {
        break label_8;
      }
    }
    jj_consume_token(LLAVECIERRE);
  }

  final public void condicion() throws ParseException {
    condicionSimple();
    label_9:
    while (true) {
      if (jj_2_51(4)) {
        ;
      } else {
        break label_9;
      }
      opLogico();
      if (jj_2_52(4)) {
        condicionSimple();
      } else if (jj_2_53(4)) {
        jj_consume_token(IDENTIFICADOR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void condicionSimple() throws ParseException {
    opSimple();
    opRelacional();
    opSimple();
  }

  final public void opLogico() throws ParseException {
    if (jj_2_54(4)) {
      jj_consume_token(AND);
    } else if (jj_2_55(4)) {
      jj_consume_token(OR);
    } else if (jj_2_56(4)) {
      jj_consume_token(NOT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void opRelacional() throws ParseException {
    if (jj_2_59(4)) {
      jj_consume_token(MAYOR);
      if (jj_2_57(4)) {
        jj_consume_token(ASIGNACION);
      } else {
        ;
      }
    } else if (jj_2_60(4)) {
      jj_consume_token(MENOR);
      if (jj_2_58(4)) {
        jj_consume_token(ASIGNACION);
      } else {
        ;
      }
    } else if (jj_2_61(4)) {
      jj_consume_token(IGUAL);
    } else if (jj_2_62(4)) {
      jj_consume_token(DIFERENTE);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void opBit() throws ParseException {
    if (jj_2_63(4)) {
      jj_consume_token(BITAND);
    } else if (jj_2_64(4)) {
      jj_consume_token(BITOR);
    } else if (jj_2_65(4)) {
      jj_consume_token(BITXOR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void For() throws ParseException {
    if (jj_2_66(2147483647)) {
      forCompleto();
    } else if (jj_2_67(2147483647)) {
      forCondicional();
    } else if (jj_2_68(2147483647)) {
      forInfinito();
    } else if (jj_2_69(2147483647)) {
      forRange();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void forCompleto() throws ParseException {
    jj_consume_token(FOR);
    asignacionVariableCorta();
    jj_consume_token(PCOMA);
    condicion();
    jj_consume_token(PCOMA);
    valor();
    opAritmetico();
    jj_consume_token(LLAVEAPERTURA);
    label_10:
    while (true) {
      sentencias();
      if (jj_2_70(4)) {
        ;
      } else {
        break label_10;
      }
    }
    jj_consume_token(LLAVECIERRE);
  }

  final public void forCondicional() throws ParseException {
    jj_consume_token(FOR);
    condicion();
    jj_consume_token(LLAVEAPERTURA);
    label_11:
    while (true) {
      sentencias();
      if (jj_2_71(4)) {
        ;
      } else {
        break label_11;
      }
    }
    jj_consume_token(LLAVECIERRE);
  }

  final public void forInfinito() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(LLAVEAPERTURA);
    label_12:
    while (true) {
      sentencias();
      if (jj_2_72(4)) {
        ;
      } else {
        break label_12;
      }
    }
    jj_consume_token(LLAVECIERRE);
  }

  final public void forRange() throws ParseException {
    jj_consume_token(FOR);
    if (jj_2_73(4)) {
      jj_consume_token(IDENTIFICADOR);
    } else if (jj_2_74(4)) {
      jj_consume_token(GUIONBAJO);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(COMA);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ASIGNACIONCORTA);
    jj_consume_token(RANGE);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(LLAVEAPERTURA);
    label_13:
    while (true) {
      sentencias();
      if (jj_2_75(4)) {
        ;
      } else {
        break label_13;
      }
    }
    jj_consume_token(LLAVECIERRE);
  }

  final public void imprimir() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PUNTO);
    if (jj_2_76(4)) {
      jj_consume_token(PRINTLN);
    } else if (jj_2_77(4)) {
      jj_consume_token(PRINT);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PAPERTURA);
    valor();
    label_14:
    while (true) {
      if (jj_2_78(4)) {
        ;
      } else {
        break label_14;
      }
      jj_consume_token(COMA);
      valor();
    }
    jj_consume_token(PCIERRE);
  }

  final public void arreglos() throws ParseException {
    if (jj_2_79(2147483647)) {
      declararAsignarArreglos();
    } else if (jj_2_80(2147483647)) {
      declararArreglos();
    } else if (jj_2_81(2147483647)) {
      asignarArreglo();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void declararArreglos() throws ParseException {
    jj_consume_token(VAR);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(CORAPERTURA);
    jj_consume_token(INT_VALOR);
    jj_consume_token(CORCIERRE);
    tipoDato();
  }

  final public void asignarArreglo() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(CORAPERTURA);
    jj_consume_token(INT_VALOR);
    jj_consume_token(CORCIERRE);
    jj_consume_token(ASIGNACION);
    opSimple();
  }

  final public void declararAsignarArreglos() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ASIGNACIONCORTA);
    jj_consume_token(CORAPERTURA);
    jj_consume_token(INT_VALOR);
    jj_consume_token(CORCIERRE);
    tipoDato();
    jj_consume_token(LLAVEAPERTURA);
    listaValores();
    jj_consume_token(LLAVECIERRE);
  }

  final public void controlSwitch() throws ParseException {
    jj_consume_token(SWITCH);
    if (jj_2_82(4)) {
      jj_consume_token(IDENTIFICADOR);
    } else {
      ;
    }
    jj_consume_token(LLAVEAPERTURA);
    label_15:
    while (true) {
      controlCase();
      if (jj_2_83(4)) {
        ;
      } else {
        break label_15;
      }
    }
    if (jj_2_85(4)) {
      jj_consume_token(DEFECTO);
      jj_consume_token(PUNTOS);
      label_16:
      while (true) {
        sentencias();
        if (jj_2_84(4)) {
          ;
        } else {
          break label_16;
        }
      }
    } else {
      ;
    }
    jj_consume_token(LLAVECIERRE);
  }

  final public void controlCase() throws ParseException {
    jj_consume_token(CASE);
    if (jj_2_86(4)) {
      condicion();
    } else if (jj_2_87(4)) {
      valor();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PUNTOS);
    label_17:
    while (true) {
      sentencias();
      if (jj_2_88(4)) {
        ;
      } else {
        break label_17;
      }
    }
    if (jj_2_89(4)) {
      jj_consume_token(FALLTHROUGH);
    } else {
      ;
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }
